<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/menu_setting"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile"
                />
            <item
                android:id="@+id/menu_FAQ"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_FAQ"
                />

            <item
                android:id="@+id/menu_aboutus"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/menu_aboutus"
                />
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/ic_log"
                android:title="@string/menu_log"
                />
        </menu>
    </item>
</menu>