<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/View_Recipe_Activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <ImageView
                android:id="@+id/viewrecipeIvRecipeImage"
                style="@style/VRecipeImageViewClass"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeUsername"
                style="@style/VRecipeTextViewSmallTextClass"
                android:text="dd-mm-yyyy"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeCreatedDate"
                style="@style/VRecipeTextViewSmallTextClass"
                android:text="sample@gmail.com"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeName"
                style="@style/VRecipeTextViewTitleClass"
                android:text=""
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeTagTitle"
                style="@style/VRecipeTextViewTitleClass"
                android:text="@string/rTagTitle"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeTag"
                style="@style/VRecipeTextViewValueClass"
                android:text="Tag list"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeIngredientTitle"
                style="@style/VRecipeTextViewTitleClass"
                android:text="@string/rIngredientTitle"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeIngredient"
                style="@style/VRecipeTextViewValueClass"
                android:text="Ingredient"
               />
            <TextView
                android:id="@+id/viewrecipeTvRecipeStepTitle"
                style="@style/VRecipeTextViewTitleClass"
                android:text="@string/rStepTitle"
                />
            <TextView
                android:id="@+id/viewrecipeTvRecipeStep"
                style="@style/VRecipeTextViewValueClass"
                android:text="Step"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/viewrecipeTvRecipeLike"
                    style="@style/VRecipeTextViewLikeClass"
                    android:text="0"
                    />
                <TextView
                    android:id="@+id/viewrecipeTvRecipeDownload"
                    style="@style/VRecipeTextViewDownloadClass"
                    android:text="@string/rDownloadText"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/viewrecipeTvCommentTitle"
                style="@style/VRecipeTextViewTitleClass"
                android:text="@string/rCommentTitle"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/viewrecipeEtComment"
                    style="@style/VRecipeEditTextCommentClass"
                    android:hint="@string/rCommentQuestion"
                    />
                <ImageView
                    android:id="@+id/viewrecipeIvSend"
                    style="@style/VRecipeImageViewSendClass"
                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewrecipeRecyclerViewComment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>