<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/My_Profile_Activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/profileIvEditProfile"
                    style="@style/MyProfileImageViewEditClass"
                    />
                <ImageView
                    android:id="@+id/profileIvImage"
                    style="@style/MyProfileImageViewClass"
                    android:background="@drawable/border"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profileTvNameTitle"
                    style="@style/MyProfileTextViewTitleClass"
                    android:text="@string/pNameTitle"
                    />
                <TextView
                    android:id="@+id/profileTvName"
                    style="@style/MyProfileTextViewValueClass"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profileTvEmailAddressTitle"
                    style="@style/MyProfileTextViewTitleClass"
                    android:text="@string/pEmailTitle"
                    />
                <TextView
                    android:id="@+id/profileTvEmailAddress"
                    style="@style/MyProfileTextViewValueClass"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profileGenderTitle"
                    style="@style/MyProfileTextViewTitleClass"
                    android:text="@string/pGenderTitle"
                    />

                <TextView
                    android:id="@+id/profileGender"
                    style="@style/MyProfileTextViewValueClass"
                    android:text=""
                    />

            </LinearLayout>
            <TextView
                android:id="@+id/profileTvPostTitle"
                style="@style/MyProfileTextViewPostTitle"
                android:text="@string/pPostTitle"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/profileTvNoContent"
                style="@style/MyProfileTextViewNoContentClass"
                android:text="@string/pNoPost"
                />
            <GridView
                android:id="@+id/profileGridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>